# nytimes_cartoon_captioning

./: .gitignore  README.md  colab.ipynb  pyproject.toml  requirements.colab.txt  requirements.txt
configs/: blip2_quant.yaml  defaults.py  opt_1_3.yaml  opt_1_3_colab.yaml  opt_1_3_new.yaml  opt_1_3_qformer.yaml  opt_1_3_qformer_merge.yaml  opt_1_3_qformer_projection.yaml  opt_1_3_svd.yaml  opt_2_7_base.yaml  opt_2_7_identity.yaml  opt_2_7_no_peft.yaml  opt_2_7_qformer_merge.yaml
data/: nytimes.py
metrics/: evaluation.py  questions.pkl  questions_train.pkl
models/: __init__.py  baseline_models.py  build.py  model_builder.py
notebooks/: 0316_qformer_Fine_tune_BLIP2_on_an_image_captioning_dataset_PEFT.ipynb  0417_opt13_langprojreshape_Fine_tune_BLIP2_on_an_image_captioning_dataset_PEFT.ipynb  0420_svd_opt13.ipynb  0422_opt13_qformer_Fine_tune_BLIP2_on_an_image_captioning_dataset_PEFT.ipynb  0423_merge_qformer_Fine_tune_BLIP2_on_an_image_captioning_dataset_PEFT.ipynb  0424_merge-load_qformer_Fine_tune_BLIP2_on_an_image_captioning_dataset_PEFT.ipynb
results/: display_results.ipynb
results/opt_2_7/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json  z918t41b_gen_captions.txt
results/opt_2_7_a_xqyf0zx2/: config.yaml  wandb-metadata.json  wandb-summary.json  xqyf0zx2_gen_captions_epoch_0.txt  xqyf0zx2_gen_captions_epoch_1.txt  xqyf0zx2_gen_captions_epoch_2.txt  xqyf0zx2_gen_captions_epoch_3.txt  xqyf0zx2_gen_captions_epoch_4_best.txt
results/opt_2_7_b_weekbf7g/: config.yaml  (+5 more)
tools/: run_net.py  test_net.py  train_net.py
wandb/: latest-run
(+81 files in other folders)
